--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"homepage": "https://github.com/annarozanska.github.io/react-moja-firma-desktop",
+	"homepage": "https://annarozanska.github.io/react-moja-firma-desktop",
 	"name": "react-website-project1",
 	"version": "0.1.0",
 	"private": true,
